# 3dproject

./: CMakeLists.txt  Coordinate.cpp  Coordinate.h  main.cpp  teddy.txt
Models/: box.DAE  plane.DAE  teddy.DAE  untitled.mtl
Objects/: CollidableObject.cpp  CollidableObject.h  EventHandler.cpp  EventHandler.h  TestObject.cpp  TestObject.h
